# llm-inference-optimizer

./: .gitignore  README.md  pyproject.toml  requirements.txt
results/: awq.json  baseline_fp16.json  benchmarks.json  bnb_4bit.json  gptq.json  profiling.txt
src/llm_optimizer/: __init__.py  awq_benchmark.py  baseline.py  benchmarks.py  bnb_4bit.py  gptq.py  profiling.py  utils.py  visualization.py
src/llm_optimizer/results/: baseline_fp16.json
